--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
         },
         {
             "src":"/projects"
+        },
+        {
+            "src":"/(.*)",
+            "dest":"/"
         }
 
     ]
