--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-    "rewrites":[
-        {
-            "src": "/(.*)",
-            "dest": "/App.js"
-        }
-    ]
+    "rewrites": [{"source": "/(.*)","destination": "/"}]
 }
